[package]
name = "groupscholar-cohort-early-warning"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
